# doma

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  STATUS.md  TDD.md  app.py  doma  prd.md  pyproject.toml  requirements.txt
.claude/: settings.json
docs/superpowers/plans/: 2026-07-11-core-loop.md  2026-07-11-doma-ingestion.md  2026-07-13-doma-dashboard.md  2026-07-13-doma-scoring.md
docs/superpowers/specs/: 2026-07-11-apartment-hunt-agent-design.md
scripts/: capture_rentcast.py  capture_stations.py
src/doma/: __init__.py  __main__.py  actions.py  bait.py  clock.py  corpus.py  decisions.py  diff.py  events.py  humanize.py  learner.py  live.py  loop.py  outreach.py  policy.py  replay.py  resolver.py  scorer.py  snapshot.py  state.py  store.py  weights.py
src/doma/adapters/: __init__.py  geosearch.py  hpd.py  rentcast.py  stations.py  streeteasy_email.py
src/hunt/: __init__.py  __main__.py  corpus.py  events.py  loop.py  policy.py  replay.py  state.py  store.py
tests/: helpers.py  test_app.py  test_bait.py  test_clock.py  test_corpus.py  test_decisions.py  test_diff.py  test_events.py  test_geosearch.py  test_hpd.py  test_humanize.py  test_learner.py  test_live.py  test_loop.py  test_outreach.py  test_policy.py  test_rentcast.py  test_replay.py  test_resolver.py  test_scaffold.py  test_scorer.py  test_snapshot.py  test_state.py  test_stations.py  test_store.py  test_streeteasy_email.py
tests/fixtures/: corpus_smoke.jsonl  hpd_sample.json  rentcast_sample.json  stations_sample.json  streeteasy_alert_sample.html
